hphp/test/slow/coeffects/reified-2.php.expectf
Fatal error: Reified generic used for coeffect rule does not refer to a class in %s on line 7
